chore: add start, dev, watch and build scripts in package.json file

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "twitter-clone-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/server.js",
+    "dev": "nodemon --ext ts --exec ts-node src/server.ts",
+    "watch": "tsc --watch",
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
