--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/server.js",
     "dev": "nodemon --ext ts --exec ts-node src/server.ts",
     "watch": "tsc --watch",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "format": "prettier --write 'src/**/*.{ts,js,json,md}'"
   },
   "keywords": [],
   "author": "",
