--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.3.0",
     "express": "^4.21.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0"
